- Fixed a crash when attempting to reload weapons attached to weapon mounts with the Second Bin mod. Existing mounts with this modification will need to be removed and re-added. 
- Fixed inability to take the Black Magic [Alt] tradition.
- Fixed missing availability and cost for the Underbarrel Weight weapon accessory. 
- Fixed laser weapons not using the Laser Weapons specialisation for their Exotic Ranged Weapon skill. 

New Strings:
- Checkbox_Options_CyberlimbAttributeBonusCap
- Checkbox_Options_CustomTimeFormat
- Label_Options_DateFormat
- Label_Options_TimeFormat
- MessageTitle_NoValidModularMount
- Message_NoValidModularMount

Build 210
Application Fixes:
- Fixed behaviour of the Weapon Accessory mount checks to properly work with accessories that can occupy multiple slots when one of those slots is occupied.
- Fixed a regression in the behaviour of weapon accessories to ensure they properly save and load their ammoreplace property. Existing accessories that should have this property will need to be re-added.Closes #3947
- Fixed a regression in the behaviour of the GetNode method for Characters that could cause them to fetch incorrect values from XML. Closes #3948
- Purchasing cyberware in career mode with the house rule to allow customisation of essence costs now works poperly. Closes #3941
- Cyberware that has a wireless pair bonus and the replace mode will now properly remove its base improvements.
- Metavariants now properly fetch their base metatype's movement speed(s) if not specified in data. Resolves an issue in which active skill checking would cause a crash when initialising, if the character was not capable of Flight.
- Added an attribute (useselected) to bonus nodes that allows preventing the improvements from providing text to the parent object. This allow for preventing Infected qualities from listing the attributes they selected.
- Fixed behaviour of the selectattributes bonus to properly concatenate the selected values. 